# Wordle-Rust

./: .gitlab-ci.yml  Cargo.toml  README.md  Trunk.toml  index.html  trunk.toml
assets/: style.css
src/: args.rs  game.rs  lib.rs  main.rs  recorder.rs
src/web/: app.rs  board.rs  buffer.rs  main.rs  msg.rs
tests/: common.rs
