[package]
name = "wordle"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
serde_json = "1.0"
console = "0.16"
rand = "0.8.5"
colored = "3.0.0"
clap = { version = "4.5.45", features = ["derive"] }
itertools = "0.14.0"

[dev-dependencies]
assert-json-diff = "2.0"
ntest = "0.9"
pretty_assertions = "1.3"
